--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@material-tailwind/html": "^3.0.0-beta.7",
-        "chart.js": "^4.4.9"
+        "chart.js": "^4.4.9",
+        "xlsx": "^0.18.5"
     }
 }
